// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPageStatus should honor buttonAttrs prop 1`] = `
<ApplicationPageStatus
  buttonAttrs={
    Array [
      Object {
        "key": 1,
        "size": "medium",
        "text": "Action 1",
      },
      Object {
        "key": 2,
        "size": "medium",
        "text": "Action 2",
      },
    ]
  }
/>
`;

exports[`ApplicationPageStatus should honor buttonAttrs prop 2`] = `
<ApplicationPageStatus
  buttonAttrs={
    Array [
      Object {
        "key": 3,
        "size": "medium",
        "text": "Action 3",
      },
    ]
  }
/>
`;

exports[`ApplicationPageStatus should honor message prop 1`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  message="First message"
/>
`;

exports[`ApplicationPageStatus should honor message prop 2`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  message="Second message"
/>
`;

exports[`ApplicationPageStatus should honor title prop 1`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  title="First title"
/>
`;

exports[`ApplicationPageStatus should honor title prop 2`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  title="Second title"
/>
`;

exports[`ApplicationPageStatus should honor variant prop 1`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  variant="no-data"
/>
`;

exports[`ApplicationPageStatus should honor variant prop 2`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  variant="no-matching-results"
/>
`;

exports[`ApplicationPageStatus should honor variant prop 3`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  variant="not-authorized"
/>
`;

exports[`ApplicationPageStatus should honor variant prop 4`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  variant="error"
/>
`;

exports[`ApplicationPageStatus should redisplay status view with new props 1`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
  message="Error status view"
  variant="error"
/>
`;

exports[`ApplicationPageStatus should render status view with the specified data 1`] = `
<ApplicationPageStatus
  buttonAttrs={
    Array [
      Object {
        "key": 1,
        "size": "medium",
        "text": "Action 1",
      },
      Object {
        "key": 2,
        "size": "medium",
        "text": "Action 2",
      },
    ]
  }
  message="Status View with all props specified"
  title="Jest Test"
  variant="no-data"
/>
`;

exports[`ApplicationPageStatus should render status view without any data 1`] = `
<ApplicationPageStatus
  buttonAttrs={Array []}
/>
`;
